# PixelLab-Tool

./: .gitignore  README.md  pixellab.spec  pyproject.toml  run_gui.py
pixellab_tool/: __init__.py  cli.py  client.py  gui.py  utils.py
pixellab_tool/gui/: __init__.py  animation.py  character.py  common.py  dashboard.py  edit.py  generate.py  rotate.py  settings.py  tileset.py
